--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,22 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-@import "~normalize.css";
-
-@import "header";
-@import "toolbar";
-@import "formula";
-@import "table";
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+$red: blue;
 
 body {
-  font-family: 'Roboto',sans-serif;
-  font-size: 12px;
-}
-
-.excel {
-
+background: $red;
 }
