--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,21 @@
-$red: blue;
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import "~normalize.css";
+
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-background: $red;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
 }
+
+.excel {
+  position: relative;
+}
+
+
