--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import "~normalize.css";
 
+@import "header";
+@import "toolbar";
+@import "formula";
+@import "table";
 
 
 * {
