--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,7 +6,6 @@
 @import "formula";
 @import "table";
 
-
 * {
   margin: 0;
   padding: 0;
@@ -14,13 +13,13 @@
 }
 
 body {
-
   font-family: 'Roboto', sans-serif;
   font-size: 12px;
 }
 
 .excel {
   position: relative;
+  color: #888;
 }
 
 
