--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -18,9 +18,16 @@
   }
 
   &__new {
-    margin-top: $db-header-height;
-    padding: 1.5rem;
-    background: #dadce0;
+    margin: 0;
+    padding: 2px 7px;
+    min-width: 1px;
+    color: #000;
+    border: 1px solid transparent;
+    border-radius: 2px;
+    height: 20px;
+    font-size: 18px;
+    line-height: 22px;
+    outline: none;
   }
 
   &__create {
