--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -5,7 +5,7 @@
   text-align: center;
   position: relative;
   display: inline-block;
-  color: rgba(0, 0, 0, .7);
+  color: black;
 
   & i {
     font-size: 18px;
