--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -2,34 +2,42 @@
 @import "mixins";
 
 .excel__header {
-  position: absolute;
-  top: 0;
-  right: 0;
+  position: fixed;
   left: 0;
-  height: $header-height;
-  padding: 8px 4px 0;
+  right: 0;
+  top: 0;
+  height: $db-header-height;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+  background: #fff;
+  box-shadow: 0 2px 5px 2px rgba(60, 64, 67, 0.15);
+  z-index: 1000;
 
-  & .input {
-    margin: 0;
-    padding: 2px 7px;
-    min-width: 1px;
-    color: #000;
-    border: 1px solid transparent;
-    border-radius: 2px;
-    height: 20px;
-    font-size: 18px;
-    line-height: 22px;
-    outline: none;
+  &__bar {
+    left: 0;
+    right: 0;
+    top: $db-header-height;
+    position: fixed;
+    height: 40px;
+    background: black;
 
-    &:hover {
+    /*&:hover {
       border: 1px solid $border-color;
     }
 
     &:focus {
       border: 2px solid blue;
-    }
+    }*/
+  }
+  &__bar2 {
+    left: 0;
+    right: 0;
+    top: $header2-height;
+    position: fixed;
+    height: 20px;
+    background: dimgrey;
+
   }
 
   .button {
@@ -39,5 +47,13 @@
 }
 .excel__header img {
   height: 35px;
-  padding: 0 15px 10px 10px;
+  padding: 10px 15px 10px 10px;
+}
+.text {
+  color: #dadce0;
+  padding: 10px;
+}
+.text2 {
+  color: #dadce0;
+
 }
