--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -22,6 +22,7 @@
     height: 40px;
     background: black;
 
+
     /*&:hover {
       border: 1px solid $border-color;
     }
@@ -52,6 +53,9 @@
 .text {
   color: #dadce0;
   padding: 10px;
+  font-weight: bold;
+  font-family: sans-serif;
+
 }
 .text2 {
   color: #dadce0;
