--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,6 @@ $formula-height: 24px;
 $info-cell-width: 40px;
 $cell-width: 120px;
 $row-height: 24px;
-$db-header-height:60px;
+$header-height:60px;
 $border-color: #c0c0c0;
 $header2-height:100px;
