--- a/src/scss/_class.scss
+++ b/src/scss/_class.scss
@@ -13,13 +13,12 @@
   background: #fff;
   box-shadow: 0 2px 5px 2px rgba(60, 64, 67, 0.15);
   z-index: 1000;
+  padding: 0 200px 0 200px;
 
-  .button {
-    @include button(red);
-  }
+
 }
 %text-shared {
-  color: #dadce0;
+  color: #fff;;
   font-weight: bold;
   font-family: sans-serif;
   padding: 10px;
