--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -19,16 +19,10 @@
   height: 40px;
   background: black;
 
-
-  .button {
-    height: 24px;
-    min-width: 24px;
-    padding: 6px;
-    text-align: center;
-    position: relative;
-    display: inline-block;
-    color: white;
+  .buy {
+@extend %buy-shared
   }
+
 }
 .bar2 {
   @extend %header-shared;
@@ -46,4 +40,9 @@
 .text2 {
   @extend %text-shared;
   font-size: 10px;
+  &:hover {
+    cursor: pointer;
+    text-decoration: cornflowerblue underline;
+
+  }
 }
