--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -42,7 +42,7 @@
   font-size: 10px;
   &:hover {
     cursor: pointer;
-    text-decoration: cornflowerblue underline;
+    text-decoration: underline;
 
   }
 }
