--- a/src/scss/_class.scss
+++ b/src/scss/_class.scss
@@ -15,12 +15,11 @@
   z-index: 1000;
   padding: 0 200px 0 200px;
 
-
 }
 %text-shared {
   color: #fff;;
   font-weight: bold;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   padding: 10px;
 }
 
