--- a/src/scss/_class.scss
+++ b/src/scss/_class.scss
@@ -26,15 +26,15 @@
 %buy-shared {
   width: 100px;
   height: 20px;
-  background: cornflowerblue;
+  background: #0832be;
   border-radius: 14px;
-  border: 1px solid cornflowerblue;
+  border: 1px solid #0832be;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 10px;
   text-decoration: none;
-  color: #000;
+  color: white;
   text-align: center;
   margin: 5px 0 0 10px;
 
